--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LAPS quiz</title>
+    <link rel="icon" href="assets/favicon.svg" />
+
     <!-- Our resources -->
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/quiz1.js" defer></script>
