We need to commit built styles for this to render on github pages skull

--- a/index.html
+++ b/index.html
@@ -44,20 +44,23 @@
     <main class="flex h-full w-full justify-center">
       <!-- Main display content -->
       <div
-        class="flex max-w-5xl flex-col gap-4 sm:flex-row sm:gap-6 md:p-12"
+        class="flex max-w-5xl flex-col items-start gap-4 sm:flex-row sm:gap-6 md:p-12"
         x-show="$store.quizLoaded"
         x-cloak
         x-data="{ answered() { return $store.answerStatus.endsWith('correct'); } }"
       >
         <!-- Left column -->
-        <div class="flex w-full flex-col" x-data>
+        <div
+          class="flex w-full flex-col sm:flex-col-reverse md:flex-col"
+          x-data
+        >
           <img
             class="h-24 w-full border-none bg-neutral-200 object-cover sm:block sm:h-96 md:rounded-lg"
             :src="$store.curQues.imageURL"
             id="image"
           />
 
-          <div class="flex flex-col gap-4 p-4 pb-0 pt-6 md:px-0">
+          <div class="flex flex-col gap-4 px-4 pt-4 sm:pb-4 md:px-0">
             <div>
               <span>
                 Question
@@ -81,7 +84,7 @@
           class="flex w-full flex-col items-start gap-4 px-0 sm:p-0 sm:px-4 sm:pr-6 sm:pt-6 md:pr-0 md:pt-0"
         >
           <!-- Scoreboard -->
-          <div>
+          <div class="px-4">
             Score:
             <span
               class="font-bold"
@@ -93,13 +96,13 @@
 
           <!-- Options grid -->
           <div
-            class="grid w-full grid-cols-1 gap-0 border-y sm:gap-4 sm:border-none"
+            class="grid w-full grid-cols-1 gap-0 border-y md:gap-4 md:border-none"
             id="options-grid"
             x-data
           >
             <template x-for="(option, index) in $store.curQues.options">
               <div
-                :class="`sm:rounded border sm:border-2 px-4 py-2 sm:px-4 sm:py-4 transition-all hover:cursor-pointer hover:bg-neutral-50 ${
+                :class="`md:rounded border-y md:border-2 px-4 py-2 md:px-4 md:py-4 transition-all hover:cursor-pointer hover:bg-neutral-50 ${
                   answered() && [$store.chosenOption, $store.curQues.answer].includes(index)
                     ? ($store.curQues.answer === index
                         ? '!bg-green-100 !border-green-200 z-20'
