Add some cool opengraph desc image etc.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>LAPS quiz</title>
     <link rel="icon" href="assets/favicon.svg" />
 
+    <meta
+      property="og:description"
+      content="A little quiz for Lakeside Fall Festival 2023"
+    />
+    <meta property="og:title" content="Quiz!" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/womogenes/quizzer/8b20e75f404404a053347ebbbae9759e4be3646f/assets/favicon.svg"
+    />
+
     <!-- Our resources -->
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/quiz1.js" defer></script>
