--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main class="flex h-full w-full justify-center">
       <!-- Main display content -->
       <div
-        class="flex max-w-5xl flex-col items-start gap-4 sm:flex-row sm:gap-6 md:p-12"
+        class="flex max-w-5xl flex-col items-start gap-4 sm:flex-row sm:gap-6 md:gap-12 md:p-12"
         x-show="$store.quizLoaded"
         x-cloak
         x-data="{
@@ -68,6 +68,7 @@
           class="flex w-full flex-col sm:flex-col-reverse md:flex-col"
           x-data
         >
+          <!-- Image -->
           <div
             class="relative h-24 overflow-hidden sm:aspect-video sm:h-auto md:rounded-lg"
           >
@@ -82,7 +83,7 @@
             />
           </div>
 
-          <div class="flex flex-col gap-4 px-4 pt-4 sm:pb-4 md:px-0">
+          <div class="flex flex-col gap-4 px-4 pt-4 sm:px-6 sm:py-6 md:px-0">
             <span>
               Question
               <span class="font-bold" x-text="$store.curIdx + 1"></span> of
@@ -99,7 +100,7 @@
 
         <!-- Right column -->
         <div
-          class="flex w-full select-none flex-col items-start gap-4 px-0 sm:p-0 sm:px-4 sm:pr-6 sm:pt-6 md:pr-0 md:pt-0"
+          class="flex w-full select-none flex-col items-start gap-4 px-4 sm:pl-0 sm:pr-6 sm:pt-6 md:pt-0"
         >
           <div x-text="$store.answerStatus"></div>
 
@@ -122,7 +123,7 @@
           >
             <template x-for="(option, index) in $store.curQues.options">
               <div
-                class="option border-y px-4 py-2 hover:cursor-pointer hover:bg-neutral-50 md:rounded md:border-2 md:px-4 md:py-4"
+                class="option relative border-y px-4 py-2 hover:cursor-pointer hover:bg-neutral-50 focus:z-30 md:rounded md:border-2 md:px-4 md:py-4"
                 tabindex="0"
                 :class="answered() && [$store.chosenOption, $store.curQues.answer].includes(option)
                     ? ($store.curQues.answer === option
