Begin implementing end screen

--- a/index.html
+++ b/index.html
@@ -53,6 +53,31 @@
 
   <body class="flex h-full flex-col items-center">
     <main class="flex h-full w-full justify-center">
+      <!-- End screen to cover the whole page  -->
+      <div
+        class="absolute z-40 flex h-full w-full items-center justify-center bg-gray-900 bg-opacity-50"
+        x-data="$store.endScreen"
+        x-cloak
+        x-show="$store.endScreen.show"
+        x-transition
+      >
+        <div
+          class="flex flex-col rounded bg-white p-6"
+          x-data="{
+            score: $store.answerHistory.reduce((a, b) => a + b, 0),
+            quizLen: $store.answerHistory.length,
+          }"
+        >
+          <span>
+            You got <span x-text="score"></span> out of
+            <span x-text="quizLen"></span> questions.
+          </span>
+          <btn @click="$store.endScreen.show = false" class="cursor-pointer">
+            Take me back
+          </btn>
+        </div>
+      </div>
+
       <!-- Main display content -->
       <div
         class="flex max-w-5xl flex-col items-start gap-4 sm:flex-row sm:gap-6 md:gap-12 md:p-12"
@@ -102,8 +127,6 @@
         <div
           class="flex w-full select-none flex-col items-start gap-4 px-4 sm:pl-0 sm:pr-6 sm:pt-6 md:pt-0"
         >
-          <div x-text="$store.answerStatus"></div>
-
           <!-- Scoreboard -->
           <div class="px-0">
             Score:
@@ -128,7 +151,7 @@
                 :class="answered() && [$store.chosenOption, $store.curQues.answer].includes(option)
                     ? ($store.curQues.answer === option
                         ? '!bg-green-100 !border-green-200 z-20'
-                        : '!bg-red-100 !border-red-200 z-20')
+                        : 'shake !bg-red-100 !border-red-200 z-20')
                     : 'bg-white'
                   "
                 @click="answer(option)"
