--- a/index.html
+++ b/index.html
@@ -67,42 +67,66 @@
     <style>
       img.emoji {
         display: inline;
-        height: 1em;
-        width: 1em;
-        margin: 0em 0.05em 0 0.1em;
-        vertical-align: -0.1em;
+        height: 1.2em;
+        width: 1.2em;
+        margin: 0 0.05em 0 0.1em;
+        vertical-align: -0.25em;
       }
     </style>
   </head>
 
   <body class="flex h-full flex-col items-center">
-    <main class="flex h-full w-full justify-center">
+    <main
+      class="flex h-full w-full justify-center"
+      x-data
+      :class="$store.state.showEndScreen && 'overflow-hidden'"
+    >
       <!-- End screen to cover the whole page  -->
       <div
-        class="absolute z-40 flex h-full w-full items-center justify-center bg-gray-900 bg-opacity-50"
+        class="absolute z-40 flex h-full w-full items-center justify-center bg-gray-900 bg-opacity-50 p-6"
         x-data
         x-cloak
         x-show="$store.state.showEndScreen"
-        x-transition
+        x-transition.opacity
       >
         <div
-          class="flex flex-col rounded bg-white p-6"
+          class="flex w-full max-w-sm flex-col items-start gap-6 rounded bg-white p-8 shadow-lg"
           x-data="{score: 0, quizLen: 0}"
           x-effect="
-            score = 8; // $store.state.answerHistory.reduce((a, b) => a + b, 0);
-            quizLen = 10; // $store.state.answerHistory.length;
+            score = $store.state.answerHistory.reduce((a, b) => a + b, 0);
+            quizLen = $store.state.answerHistory.length;
           "
         >
-          <span>
-            You got <span x-text="score"></span> out of
-            <span x-text="quizLen"></span> questions.
-          </span>
-          <btn
-            @click="$store.state.showEndScreen = false"
-            class="cursor-pointer"
+          <div class="flex flex-col gap-2">
+            <div class="text-3xl font-bold">
+              <span x-show="score == 0" class="break-all">womp womp 😭</span>
+              <span x-show="score == 1" class="break-all">Good effort 🥲</span>
+              <span x-show="score >= 2 && score < 5" class="break-all">
+                Not bad!
+              </span>
+              <span x-show="score >= 5" class="break-all"
+                >Congratulations! 🥳</span
+              >
+            </div>
+
+            <span>
+              You got <span x-text="score" class="font-bold"></span> out of
+              <span x-text="quizLen" class="font-bold"></span> questions.
+            </span>
+
+            <div x-show="score >= 5" class="flex flex-col gap-1">
+              <span>Here's a lollipop:</span>
+              <span class="self-center text-5xl">🍭</span>
+            </div>
+          </div>
+
+          <a
+            href="/"
+            tabindex="0"
+            class="cursor-pointer rounded border-2 bg-white px-4 py-2 transition-colors hover:bg-neutral-200"
           >
-            Take me back
-          </btn>
+            I want more quizzes 🥺
+          </a>
         </div>
       </div>
 
@@ -182,7 +206,7 @@
             <template x-for="(option, index) in $store.state.curQues.options">
               <div
                 class="option relative border-y px-4 py-2 hover:cursor-pointer hover:bg-neutral-50 focus:z-30 md:rounded md:border-2 md:px-4 md:py-4"
-                tabindex="0"
+                :tabindex="!$store.state.quizComplete && 0"
                 :class="answered() && [$store.state.chosenOption, $store.state.curQues.answer].includes(option)
                     ? ($store.state.curQues.answer === option
                         ? '!bg-green-100 !border-green-200 z-20'
