--- a/quiz/index.html
+++ b/quiz/index.html
@@ -18,7 +18,6 @@
 
     <!-- Our resources -->
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/utils.js" type="module" defer></script>
     <script src="/js/index.js" type="module" defer></script>
 
     <!-- Apline JS -->
@@ -74,10 +73,11 @@
   </head>
 
   <body>
+    <!-- Loading spinner -->
     <div
-      class="absolute z-40 flex h-full w-full items-center justify-center bg-white"
+      class="absolute z-40 flex h-full w-full flex-col items-center justify-center gap-4 bg-white p-6"
       x-data
-      x-show="!$store.state.quizLoaded"
+      x-show="!$store.state.quizLoaded || $store.state.questions?.length === 0"
       x-transition
     >
       <svg
@@ -85,6 +85,8 @@
         height="48"
         viewBox="0 0 24 24"
         xmlns="http://www.w3.org/2000/svg"
+        x-show="!$store.state.quizLoaded"
+        x-transition
       >
         <style>
           .spinner_ajPY {
@@ -106,6 +108,19 @@
           class="spinner_ajPY"
         />
       </svg>
+      <div
+        class="max-w-sm"
+        x-cloak
+        x-show="$store.state.questions?.length === 0"
+        x-transition
+      >
+        <p>
+          Some error occured. ☹️ Please check that the source spreadsheet is
+          publicly accessible and has questions in it.
+        </p>
+        <br />
+        <a href="/">Go back</a>
+      </div>
     </div>
 
     <main
@@ -164,8 +179,8 @@
 
       <!-- Main display content -->
       <div
-        class="flex max-w-5xl flex-col items-start gap-4 sm:flex-row sm:gap-6 md:gap-12 md:p-12"
-        x-show="$store.state.quizLoaded"
+        class="flex w-full max-w-5xl flex-col items-start gap-4 sm:flex-row sm:gap-6 md:gap-12 md:p-12"
+        x-show="$store.state.quizLoaded && $store.state.questions.length > 0"
         x-cloak
         x-data="{
           answered() { return $store.state.answerStatus.endsWith('correct'); },
@@ -187,8 +202,9 @@
             <img
               class="absolute h-full w-full object-cover"
               :class="transitionOpacity()"
-              :src="$store.state.curQues.imageURL"
+              :src="$store.state.curQues?.imageURL"
               id="image"
+              :alt="` Image for question ${$store.state.curIdx + 1}`"
             />
           </div>
 
@@ -206,7 +222,7 @@
             <p
               class="text-lg font-bold md:text-2xl"
               :class="transitionOpacity()"
-              x-text="$store.state.curQues.question"
+              x-text="$store.state.curQues?.question"
             ></p>
           </div>
         </div>
@@ -235,7 +251,7 @@
             id="options-grid"
             x-data
           >
-            <template x-for="(option, index) in $store.state.curQues.options">
+            <template x-for="(option, index) in $store.state.curQues?.options">
               <div
                 class="option relative border-y px-4 py-2 hover:cursor-pointer hover:bg-neutral-50 focus:z-30 md:rounded md:border-2 md:px-4 md:py-4"
                 :tabindex="!$store.state.quizComplete && 0"
