--- a/quiz/index.html
+++ b/quiz/index.html
@@ -21,7 +21,10 @@
     <script src="/js/quiz.js" type="module" defer></script>
 
     <!-- Apline JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"
+      defer
+    ></script>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/@alpinejs/mask@3.x.x/dist/cdn.min.js"
