Get back to good scrolling thing on homepage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    <main class="flex w-full flex-col items-center overflow-clip">
+    <main class="overflow-clip">
       <div
         class="flex w-full justify-center bg-[#b43737] p-12 py-12 text-white"
       >
@@ -54,14 +54,14 @@
 
       <!-- Fetch quizzes -->
       <div
-        class="scroll relative flex w-full max-w-max justify-center gap-12 overflow-auto px-12 py-12"
+        class="relative flex flex-wrap gap-12 overflow-auto px-12 py-12"
         x-data
         x-show="$store.quizzes.length > 0"
         x-transition
       >
         <template x-data x-for="(quiz, i) in $store.quizzes">
           <div
-            class="m-auto flex flex-none scale-100 flex-col items-center gap-4 transition-all hover:scale-105"
+            class="flex scale-100 flex-col items-center gap-4 transition-all hover:scale-105"
           >
             <!-- Image -->
             <div class="relative h-48 w-48 overflow-hidden rounded-full">
